--- a/lib/plausible_web/templates/auth/password_reset_request_success.html.eex
+++ b/lib/plausible_web/templates/auth/password_reset_request_success.html.eex
@@ -7,6 +7,12 @@
     Didn't receive an email?
   </div>
   <div class="mt-2 text-sm text-gray-600 dark:text-gray-400 leading-tight">
-    Please check your spam folder and contact <a href="mailto:support@plausible.io" class="text-indigo-500">support@plausible.io</a> if the problem persists
+    Please check your spam folder and
+    <%= if Application.get_env(:plausible, :is_selfhost) do %>
+      ask on our <a href="https://github.com/plausible/analytics/discussions" class="text-indigo-500">community-supported forum</a>
+    <% else %>
+      contact <a href="mailto:support@plausible.io" class="text-indigo-500">support@plausible.io</a>
+    <% end %>
+    if the problem persists
   </div>
 </div>
