Remove bad EEX tag

--- a/lib/plausible_web/templates/stats/site_locked.html.eex
+++ b/lib/plausible_web/templates/stats/site_locked.html.eex
@@ -9,7 +9,7 @@
       </h3>
 
       <%= case @conn.assigns[:current_user_role] do %>
-        <%= :owner -> %>
+        <% :owner -> %>
           <div class="mt-3 text-gray-600 dark:text-gray-300 text-center">
             <p>
               This site is locked because you don't have an active subscription. We are still counting stats in the background but your access to the dashboard is restricted. Subscribe with the link below to access your stats again.
@@ -18,7 +18,7 @@
           <div class="mt-6 w-full text-center">
             <%= link("Manage my subscription", to: "/settings", class: "inline-flex items-center px-4 py-2 border border-transparent shadow-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:text-sm") %>
           </div>
-        <%= role when role in [:admin, :viewer] -> %>
+        <% role when role in [:admin, :viewer] -> %>
           <div class="mt-3 text-gray-600 dark:text-gray-300 text-center">
             <p>
             This site is currently locked and cannot be accessed. The site owner <b><%= @owner.email %></b> must upgrage their subscription plan in order to
@@ -32,7 +32,7 @@
           <div class="mt-6 w-full text-center">
             <%= link("Back to my sites", to: "/sites", class: "inline-flex items-center px-4 py-2 border border-transparent shadow-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:text-sm") %>
           </div>
-        <%= _ -> %>
+        <% _ -> %>
           <div class="mt-3 text-gray-600 dark:text-gray-300 text-center">
             <p>
             This site is currently locked and cannot be accessed. You can check back later or contact the site owner to unlock it.
