--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -322,3 +322,17 @@ iframe[hidden] {
     left: 0 !important;
   }
 }
+
+.active-prop-heading {
+  /* Properties related to text-decoration are all here in one place. TailwindCSS does support underline but that's about it. */
+  text-decoration-line: underline;
+  text-decoration-color: #4338CA; /* tailwind's indigo-700 */
+  text-decoration-thickness: 2px;
+}
+
+@media (prefers-color-scheme: dark) {
+  .active-prop-heading {
+    text-decoration-color: #6366F1; /* tailwind's indigo-500 */
+  }
+
+}
