--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -131,6 +131,7 @@ blockquote {
   animation: pulse-ring 3s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
   @apply bg-green-500;
 }
+
 .pulsating-circle::after {
   content: '';
   position: absolute;
@@ -150,9 +151,11 @@ blockquote {
   0% {
     transform: scale(.33);
   }
+
   50% {
     transform: scale(1);
   }
+
   40%, 100% {
     opacity: 0;
   }
@@ -162,9 +165,11 @@ blockquote {
   0% {
     transform: scale(.8);
   }
+
   25% {
     transform: scale(1);
   }
+
   50%, 100% {
     transform: scale(.8);
   }
@@ -187,11 +192,13 @@ blockquote {
     border: 8px solid transparent;
     border-bottom-color: rgba(27,31,35,0.15);
 }
+
 .dropdown-content::before, .dropdown-content::after {
     position: absolute;
     display: inline-block;
     content: "";
   }
+
 .dropdown-content::after {
     top: -14px;
     right: 9px;
@@ -226,24 +233,6 @@ blockquote {
   background-color: rgb(26, 32, 44);
 }
 
-.twitter-icon {
-  width: 1.25em;
-  height: 1.25em;
-  display: inline-block;
-  background-repeat: no-repeat;
-  background-size: contain;
-  vertical-align: text-bottom;
-  background-image: url(data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2072%2072%22%3E%3Cpath%20fill%3D%22none%22%20d%3D%22M0%200h72v72H0z%22%2F%3E%3Cpath%20class%3D%22icon%22%20fill%3D%22%231da1f2%22%20d%3D%22M68.812%2015.14c-2.348%201.04-4.87%201.744-7.52%202.06%202.704-1.62%204.78-4.186%205.757-7.243-2.53%201.5-5.33%202.592-8.314%203.176C56.35%2010.59%2052.948%209%2049.182%209c-7.23%200-13.092%205.86-13.092%2013.093%200%201.026.118%202.02.338%202.98C25.543%2024.527%2015.9%2019.318%209.44%2011.396c-1.125%201.936-1.77%204.184-1.77%206.58%200%204.543%202.312%208.552%205.824%2010.9-2.146-.07-4.165-.658-5.93-1.64-.002.056-.002.11-.002.163%200%206.345%204.513%2011.638%2010.504%2012.84-1.1.298-2.256.457-3.45.457-.845%200-1.666-.078-2.464-.23%201.667%205.2%206.5%208.985%2012.23%209.09-4.482%203.51-10.13%205.605-16.26%205.605-1.055%200-2.096-.06-3.122-.184%205.794%203.717%2012.676%205.882%2020.067%205.882%2024.083%200%2037.25-19.95%2037.25-37.25%200-.565-.013-1.133-.038-1.693%202.558-1.847%204.778-4.15%206.532-6.774z%22%2F%3E%3C%2Fsvg%3E);
-}
-
-.tweet-text a {
-  @apply text-blue-500;
-}
-
-.tweet-text a:hover {
-  text-decoration: underline;
-}
-
 .stats-item {
   min-height: 436px;
 }
@@ -258,7 +247,7 @@ blockquote {
     height: 27.25rem;
   }
 
-  .stats-item__header {
+  .stats-item-header {
     height: inherit;
   }
 }
@@ -274,6 +263,7 @@ blockquote {
 .fade-enter {
   opacity: 0;
 }
+
 .fade-enter-active {
   opacity: 1;
   transition: opacity 100ms ease-in;
