Allow custom styles to be passed to embedded iframe (#1522)
* Allow custom styles to be passed to embedded iframe

* Changelog

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -326,3 +326,7 @@ iframe[hidden] {
   }
 
 }
+
+/* This class is used for styling embedded dashboards. Do not remove. */
+/* stylelint-disable */
+.date-option-group { }
