--- a/lib/plausible_web/templates/billing/change_enterprise_plan.html.eex
+++ b/lib/plausible_web/templates/billing/change_enterprise_plan.html.eex
@@ -64,5 +64,4 @@
   Questions? Contact <%= link("support@plausible.io", to: "mailto: support@plausible.io", class: "text-indigo-500") %>
 </div>
 
-<script type="text/javascript" src="https://cdn.paddle.com/paddle/paddle.js"></script>
-<script>Paddle.Setup({vendor: 49430})</script>
+<%= render("_paddle_script.html") %>
