--- a/lib/plausible_web/templates/billing/change_enterprise_plan.html.eex
+++ b/lib/plausible_web/templates/billing/change_enterprise_plan.html.eex
@@ -38,6 +38,7 @@
 
         <ul class="w-full py-4 dark:text-gray-100">
           <li>Up to <b><%= PlausibleWeb.StatsView.large_number_format(@plan.monthly_pageview_limit) %></b> monthly pageviews</li>
+          <li>Up to <b><%= PlausibleWeb.StatsView.large_number_format(@plan.site_limit) %></b> sites</li>
           <li>Up to <b><%= PlausibleWeb.StatsView.large_number_format(@plan.hourly_api_request_limit) %></b> hourly api requests</li>
         </ul>
 
