--- a/lib/plausible_web/templates/stats/waiting_first_pageview.html.eex
+++ b/lib/plausible_web/templates/stats/waiting_first_pageview.html.eex
@@ -14,6 +14,11 @@
 </script>
 
 <div class="w-full max-w-md mx-auto mt-8">
+  <%= if @site.locked do %>
+    <div class="w-full px-4 py-4 text-sm font-bold text-center text-yellow-800 bg-yellow-100 rounded transition" style="top: 91px" role="alert">
+      <p>This dashboard is actually locked. You are viewing it with super-admin access</p>
+    </div>
+  <% end %>
   <div class="bg-white dark:bg-gray-800 shadow-md rounded px-8 pt-6 pb-8 mb-4 mt-16 relative text-center">
     <h2 class="text-xl font-bold dark:text-gray-100">Waiting for first pageview</h2>
     <h2 class="text-xl font-bold dark:text-gray-100">on <%= @site.domain %></h2>
