Add a note to invite team members (#1715)

--- a/lib/plausible_web/templates/email/welcome_email.html.eex
+++ b/lib/plausible_web/templates/email/welcome_email.html.eex
@@ -3,10 +3,11 @@ Hey <%= user_salutation(@user) %>,
 We are building Plausible to provide a simple and ethical approach to tracking website visitors.
 We're super excited to have you on board!
 <br /><br />
-Here are five steps to get the most out of your Plausible experience:
+Here's how to get the most out of your Plausible experience:
 <br /><br />
 * <%= link("Enable email reports", to: "https://docs.plausible.io/email-reports/") %> and notifications for <%= link("traffic spikes", to: "https://plausible.io/docs/traffic-spikes") %><br />
 * <%= link("Integrate with Search Console", to: "https://plausible.io/docs/google-search-console-integration") %> to get keyword phrases people find your site with<br />
+* <%= link("Invite team members and other collaborators", to: "https://plausible.io/docs/users-roles") %><br />
 * Set up some easy goals including <%= link("404 error pages", to: "https://plausible.io/docs/error-pages-tracking-404") %> and <%= link("outbound link clicks", to: "https://plausible.io/docs/outbound-link-click-tracking/") %><br />
 * <%= link("Opt out from counting your own visits", to: "https://plausible.io/docs/excluding") %><br />
 * If you're concerned about adblockers, <%= link("set up a proxy to bypass them", to: "https://plausible.io/docs/proxy/introduction") %><br />
